Adição das perguntas e introdução e finalizamento do Js

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -10,16 +10,16 @@
     <div class="conteiner">
         <h1>Enfermagem Quiz</h1>
         <div class="quiz">
-            <h2 id="questoes">As questões deverão ser feitas aqui</h2>
-            <div id="respostas">
+            <h2 id="question">As questões deverão ser feitas aqui</h2>
+            <div id="answer-buttons">
                 <button class="btn">Resposta A</button>
                 <button class="btn">Resposta B</button>
                 <button class="btn">Resposta C</button>
                 <button class="btn">Resposta D</button>
             </div>
-            <button id="proximo">Proxima Pergunta</button>
+            <button id="next-btn">Proxima Pergunta</button>
         </div>
     </div>
-    
+    <script src="/script.js"></script>
 </body>
 </html>
