Alguns ajustes no footer

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -20,6 +20,10 @@
             <button id="next-btn">Proxima Pergunta</button>
         </div>
     </div>
+    <footer>
+        <h3>Nome: Milena Assis Bertuqui</h3>
+        <h3>RA: 8178883</h3>
+    </footer>
     <script src="/script.js"></script>
 </body>
 </html>
